# minishop

./: .env  main.py  pyproject.toml
items/: crud.py  items_views.py  schemas.py
minishop/: main.py
minishop/users/: schemas.py  users_views.py
users/: crud.py
